<resources>
    <string name="app_name">Mi bebé y yo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_module_title_with_params">%s. %s</string>
    <string name="text_module_one">1. El embarazo</string>
    <string name="text_module_two">2. Controles de embarazo</string>
    <string name="text_module_three">3. Vida saludable durante el embarazo</string>
    <string name="text_module_four">4. Preparación para el nacimiento</string>
    <string name="text_module_five">5. El nacimiento</string>
    <string name="text_module_six">6. Cuidados del recién nacido</string>
    <string name="text_module_seven">7. Visitas al establecimiento de salud después del parto</string>
    <string name="text_m1_p1_desc">Es el periodo comprendido entre la fecundación de un ovulo por un espermatozoide y el nacimiento del bebé.
        \n\nEn el contexto de la pandemia de COVID-19,  <b>es importante proteger la salud de la madre, del bebé</b> y de quienes les  rodean.
    </string>
    <string name="text_m1_p1_dialog_title">Selecciona un tema</string>
    <string name="text_m1_p1_i1">Mi cuerpo</string>
    <string name="text_m1_p1_i2">El momento de quedar embarazada</string>
    <string name="text_m1_p1_i3">Viaje dentro del útero</string>
    <string name="text_m1_p1_i4">Mi cuerpo se adapta</string>
    <string name="text_m1_p1_i5">Problemas relacionados con el embarazo</string>
    <string name="text_m1_p1_i6">Tener un bebé durante la pandemia de COVID-19</string>
    <string name="text_m1_p2_title">Mi cuerpo</string>
    <string name="text_m1_p2_desc">El bebe se está desarrollando en el útero.
        \n\nEl <b>útero</b> tiene la forma y el tamaño de una pera.
    </string>
    <string name="text_m1_p3_title">El momento de quedar embarazada</string>
    <string name="text_m1_p3_desc">
        Puedo quedar embarazada después de tener relaciones sexo-coitales con mi pareja.
        \n\nSi tengo un ciclo menstrual normal de 28 días, el día más probable para que me ocurra
        un embarazo es el día 14 y se extiende desde 3 días antes, hasta 3 días después.
    </string>
    <string name="text_m1_p3_t1">
        Óvulo, producido por el ovario
    </string>
    <string name="text_m1_p3_t2">
        Espermatozoide, producido por los testículos
    </string>
    <string name="text_m1_p4_title">Viaje dentro del útero</string>
    <string name="text_m1_p4_sub_title">Viaje de los espermatozoides</string>
    <string name="text_m1_p4_desc">Después de las relaciones sexo-coitales, <b>millones de espermatozoides viajan por la vagina,</b>
        luego pasan a través del útero y se dirigen hacia las dos trompas de Falopio.
        Algunos espermatozoides finalmente llegan al óvulo.
    </string>
    <string name="text_m1_p4_desc_2">En una de las trompas, los espermatozoides con sus cabezas,
        comienzan a perforar las paredes del óvulo, pero estas resisten.
        <b>De estos solo uno logrará entrar.</b>
    </string>
    <string name="text_m1_p5_title">Crecimiento dentro del útero</string>
    <string name="text_m1_p5_desc">
        Cuando un espermatozoide penetra en el óvulo, este queda fecundado y
        desciende por el interior de la trompa de Falopio hasta el útero.
        \n\nYa dentro del útero, las células continúan dividiéndose y se implantan en la pared uterina,
        donde continúan a desarrollándose durante 9 meses. 
    </string>
    <string name="text_m1_p6_title">Crecimiento dentro del útero</string>
    <string name="text_m1_p6_desc">Desde la entrada del espermatozoide al óvulo comienza una serie de cambios y transformaciones celulares, que llevan como producto final la formación de mi bebé.</string>
    <string name="text_m1_p7_title">Crecimiento dentro del útero</string>
    <string name="text_m1_p7_desc">En la primera semana: son células pequeñas.<br /> En la tercera semana: el <b>corazón</b> comienza a<br />latir.</string>
    <string name="text_m1_p7_desc2">A partir de las 8 semanas: el <b>cuerpo</b> de mi bebé comienza a<br /> desarrollarse.
        \n\n<b>12 semanas:</b> tiene <b>ojos</b>,<b>boca</b> con brotes <b>dentales</b> y su <b>sangre</b> comienza a circular.</string>
    <string name="text_m1_p7_desc3">Entre las 12 semanas y 17 semanas:<b> se chupa el dedo</b> y sus <b>genitales</b> ya están definidos.</string>
    <string name="text_m1_p8_title">Crecimiento dentro del útero</string>
    <string name="text_m1_p8_desc">A partir de las 20 semanas: puedo comenzar a sentir<br /> que mi bebé <b>se mueve.</b> Ya puede escuchar sonidos, entonces,es el momento para empezar a <b>hablarle.</b></string>
    <string name="text_m1_p8_desc2">A las 32 semanas: en esta etapa, generalmente mi bebé ya esta buscando la posición de salida que es boca abajo, ya casi estará listo o lista para salir.
        \n\nSi no se gira, se dice que está en posición de nalgas o transversal (atravesado/a).</string>
    <string name="text_m1_p9_title">Crecimiento dentro del útero</string>
    <string name="text_m1_p9_desc">A las 38 semanas ya queda poco tiempo para que<br /> nazca mi bebé, cada día que pasa dentro del vientre<br /> es necesario para su desarrollo.
        \n\nEn esta etapa, es mas difícil descansar pues el peso de mi bebé hace presión sobre los huesos de la pelvis y eso ocasiona molestias. </string>
    <string name="text_m1_p10_title">Duración del embarazo</string>
    <string name="text_m1_p10_desc">Aproximadamente un embarazo <b>dura 40<br /> semanas o 9 meses.
        \n</b>Por lo general, el personal de salud calcula<br /> el tiempo del embarazo en <b>semanas</b>, no en<br /> meses, ya que esto es más exacto.
        \nLa duración del embarazo también se divide<br /> en trimestres.
        \n\n<b>El primer trimestre</b> cubre los primeros tres<br /> meses de embarazo (desde la fecha de mi última regla hasta las 14 semanas).
        \n\n<b>El segundo trimestre</b>se extiende del cuarto<br /> al sexto mes de embarazo (de las 15 a las<br /> 28 semanas).
        \n\n<b>El tercer trimestre</b> va desde el séptimo al<br /> noveno mes de embarazo (desde las 29<br /> semanas hasta el nacimiento).</string>
    <string name="text_m1_p11_title">Mi cuerpo se adapta</string>
    <string name="text_m1_p11_desc">El útero <b>aumenta de tamaño</b> a medida que
        crece el bebé.
    </string>
    <string name="text_enter_here">Entra acá</string>
    <string name="text_m1_p12_title">Mi cuerpo se adapta</string>
    <string name="text_m1_p12_desc">
        Al final del embarazo mi bebé mide alrededor de <b>50 centímetros</b>
    </string>
    <string name="text_m1_p13_title">Mi cuerpo se adapta</string>
    <string name="text_m1_p13_desc">Mis pechos aumentan de tamaño, son más pesados, más sensibles y las areolas se vuelven más oscuras.
        \n\nEs posible que comience a salir calostro de mis pechos, que es el primer alimento que tomará
        el bebé antes de que se empiece a producir leche. Estas una señales me indican que mi cuerpo se prepara para el nacimiento de mi bebé.\n\n<b>Mi piel</b>
        se oscurece. Puede aparecer una línea oscura debajo de mi ombligo.\n\nPueden aparecer algunas veces marcas <b>café oscuras</b> en mi cara.
        \n\nEs posible que me aparezcan estrías y más vello corporal, alrededor de la segunda mitad del embarazo.
    </string>
    <string name="text_m1_p14_title">Vida de mi bebé dentro del útero</string>
    <string name="text_m1_p14_desc">Mi bebé se mantiene <b>en el líquido amniótico contenido en la bolsa de agua.</b>
        \n\nEl líquido amniótico es un líquido claro y ligeramente amarillento que rodea mi bebe dentro del útero, no solo permite que mi bebé
        se <b>mueva</b> fácilmente en mi útero, sino que también le <b>protege</b> de golpes externos e infecciones.
        \n\nLa bolsa de agua es muy fina, pero es muy elástica, resistente y le protege muy bien. La bolsa de agua está cerrada por el <b>tapón
        mucoso</b>, una "barrera" formada por la mucosidad que se espesa durante el embarazo.
    </string>
    <string name="text_m1_p15_title">Alimentación del bebé</string>
    <string name="text_m1_p15_desc"><b>La placenta es el órgano de intercambio</b> entre mi bebé y yo. Está conectado a mi bebé por medio del <b>cordón umbilical</b>.
    </string>
    <string name="text_m1_p15_desc2">Toda lo que consumo se transforma, luego es absorbido por mi sangre y filtrado por la placenta.
        Una vez filtrados, estos alimentos pasan <b>a través del cordón umbilical para nutrir a mi bebé.</b>\n\nPor eso
        es importante evitar consumir alimentos dañinos, ya que pueden atravesar la placenta y afectar la salud de ambos.
    </string>
    <string name="text_m1_p16_title">Mi cuerpo se adapta a los cambios físicos\nSignos y síntomas</string>
    <string name="text_m2_p1_i1">Importancia de mis controles prenatales</string>
    <string name="text_m2_p1_i2">Mis derechos en los controles prenatales</string>
    <string name="text_m2_p1_i3">Durante mis controles prenatales</string>
    <string name="text_m2_p1_i4">Ultrasonografía</string>
    <string name="text_m2_p1_i5">Planificación Familiar</string>
    <string name="text_m2_p1_i6">Por una vida libre de violencia contra la mujer</string>
    <string name="text_m2_p1_i7">Plan de parto para una maternidad segura.</string>
    <string name="text_m2_p1_i8">Vacunas</string>
    <string name="text_m2_p1_i9">Cuidados Preventivos</string>
    <string name="text_m2_p1_i10">Programando mi próximo control prenatal.</string>
    <string name="text_m2_p1_i11">Evaluación sobre la atención prenatal</string>
    <string name="text_m2_p1_i12">Embarazo en tiempos de COVID 19</string>
    <string name="text_m2_p10_title">Ultrasonografía</string>
    <string name="text_m2_p10_desc">Es un examen prenatal muy importante, me permite conocer el desarrollo de mi bebé dentro del útero, ver ciertos órganos del cuerpo de mi bebé y oír sus latidos ntes de nacer.</string>
    <string name="text_m2_p10_desc2">Antes de la <b>semana 20 de embarazo,</b> en la medida de lo posible, el personal de salud hace una ultrasonografía para saber: <b>la fecha probable del parto </b>y el buen desarrollo del bebé</string>
    <string name="text_m2_p10_desc3">El Ministerio de Salud recomienda realizar al menos 3 ultrasonografías durante el embarazo sin complicaciones.</string>
    <string name="text_m2_p10_desc4">A lo largo del embarazo, en caso de tener sangrado, probemas en el útero, enermedad grave de la madre o cualquier otro problema, el personal de salud podrá realizar <b>otras ultrasonografías</b></string>
    <string name="text_m2_p11_title">Planificación familiar</string>
    <string name="text_m2_p11_desc">Al final del embarazo el personal de salud nos orienta, a mi pareja y a mí, sobre los métodos de planificación familiar, nos explican cada uno de ellos para poder valorarlos y acordar el método más conveniente a utilizar.
        \nLos métodos de planificación familiar pueden ser temporales o permanentes.</string>
    <string name="text_m6_p22_title">Salud sexual</string>
    <string name="text_m7_p14_desc_1">Temporales</string>
    <string name="text_m7_p14_desc_2">Lactancia materna exclusiva</string>
    <string name="text_m7_p14_desc_3">Dispositivo intrauterino</string>
    <string name="text_m7_p14_desc_4">Pastillas anticonceptivas</string>
    <string name="text_m7_p14_desc_5">Inyecciones</string>
    <string name="text_m7_p14_desc_6">Preservativos masculinos y femeninos</string>
    <string name="text_m7_p14_desc_7">Implante subdérmico</string>
    <string name="text_m7_p14_desc_8">Permanentes</string>
    <string name="text_m7_p14_desc_9">Esterilización femenina</string>
    <string name="text_m7_p14_desc_10">Esterilización masculina</string>
</resources>