<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.main.module_two.dialogs.M2P1D1Fragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:layout_width="80dp"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:background="@color/colorLightGray" />


                <TextView
                    style="@style/TextViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_8dp"
                    android:gravity="center"
                    android:text="@string/text_m1_p1_dialog_title" />

                <Button
                    android:id="@+id/button_item1"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i1" />

                <Button
                    android:id="@+id/button_item2"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i2" />

                <Button
                    android:id="@+id/button_item3"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i3" />

                <Button
                    android:id="@+id/button_item4"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i4" />

                <Button
                    android:id="@+id/button_item5"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i5" />

                <Button
                    android:id="@+id/button_item6"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i6" />

                <Button
                    android:id="@+id/button_item7"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i7" />

                <Button
                    android:id="@+id/button_item8"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i8" />

                <Button
                    android:id="@+id/button_item9"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i9" />

                <Button
                    android:id="@+id/button_item10"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i10" />

                <Button
                    android:id="@+id/button_item11"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i11" />

                <Button
                    android:id="@+id/button_item12"
                    style="@style/ButtonItem"
                    android:text="@string/text_m2_p1_i12" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>